# attack-le-fence

./: CMakeLists.txt  Card.cpp  Card.h  CardFactory.cpp  CardFactory.h  Deck.cpp  Deck.h  Game.cpp  Game.h  IPlayer.cpp  IPlayer.h  Player.cpp  Player.h  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
Boost_tests/: CMakeLists.txt
Boost_tests/boost_1_84_0/bin.v2/: project-cache.jam
Boost_tests/lib/cmake/boost_headers-1.84.0/: boost_headers-config.cmake
google_tests/: CMakeLists.txt  DeckTest.cpp  GameTests.cpp
gui/: Button.cpp  Button.h  Element.cpp  Element.h  GUI_2D.cpp  GUI_2D.h
player/: LocalCLIPlayer.cpp  LocalCLIPlayer.h  Player.cpp  Player.h
